--- a/src/app/(routes)/Members/LabHead/components/InfoTabs/ThesisSupervised/MastersTab.module.css
+++ b/src/app/(routes)/Members/LabHead/components/InfoTabs/ThesisSupervised/MastersTab.module.css
@@ -1,20 +1,25 @@
-.mastersTab {
-  padding: 20px;
-}
+/* .mastersTab {
+  padding: 0 auto;
+} */
 
 .mastersTab h3 {
-  font-size: 20px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 16px;
   margin-bottom: 10px;
 }
 
 .mastersTab table {
-  width: 100%;
+  margin: 0 auto;
+  width: fit-content;
   border-collapse: collapse;
 }
 
 .mastersTab table th, .mastersTab table td {
   border: 1px solid #ddd;
+  text-wrap: wrap;
   padding: 8px;
+  font-size: smaller;
   text-align: left;
 }
 
@@ -26,15 +31,16 @@
   display: flex;
   justify-content: center;
   padding: 1rem;
+  padding-top: 2rem;
   list-style: none;
 }
 
 .pagination li {
-  margin: 0 0.5rem;
+  margin: 0.5rem;
 }
 
 .pagination li a {
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.7rem;
   border: 1px solid #ddd;
   cursor: pointer;
 }
